Fix logo glitch (shrink effect) on safari

--- a/src/source/styles/components/_navbar.scss
+++ b/src/source/styles/components/_navbar.scss
@@ -34,7 +34,7 @@ $navbar-form-collapse-breakpoint-max: $screen-sm-max;
     color: #fff;
     vertical-align: middle;
     margin-left: 5px;
-    transition: opacity 1s ease;
+    //transition: opacity 1s ease;
     @media (min-width: $grid-float-breakpoint) {
       font-size: 40px;
     }
@@ -47,7 +47,7 @@ $navbar-form-collapse-breakpoint-max: $screen-sm-max;
     width: 35px;
     height: auto;
     @media (min-width: $grid-float-breakpoint) {
-      width: auto;
+      width: 43px;
     }
     transition: all .6s ease;
   }
@@ -66,9 +66,9 @@ $navbar-form-collapse-breakpoint-max: $screen-sm-max;
       .navbar-brand {
         margin: 0 0 0 -7px;
         padding: 7px;
-        width: 50px;
-        height: 50px;
-        overflow: hidden;
+        width: auto;
+        height: auto;
+        //overflow: hidden;
         img {
           width: 35px;
           height: auto;
@@ -77,6 +77,7 @@ $navbar-form-collapse-breakpoint-max: $screen-sm-max;
           color: $tertiary-blue-dark;
           opacity: 0;
           visibility: hidden;
+          display: none;
         }
       }
     }
